2011-03-11  Avi Drissman  <avi@google.com>

        Reviewed by Tony Chang.

        Fix missing initialization of new member variables.
        https://bugs.webkit.org/show_bug.cgi?id=50969

        * public/WebMenuItemInfo.h:
        (WebKit::WebMenuItemInfo::WebMenuItemInfo):

2011-03-11  Roland Steiner  <rolandsteiner@chromium.org>

        Reviewed by Ryosuke Niwa.

        Bug 55570 - Remove dependency of dom/InputElement.cpp on html/ and wml/
        https://bugs.webkit.org/show_bug.cgi?id=55570

        Add a virtual function toInputElement() to Node that has a default
        implementation of returning 0.
        For HTMLInputElement and WMLInputElement (which derive from InputElement)
        override this to return the object.
        Change all calling sites of the old toInputElement to use the new member
        function. This also allows us to save some casts.

        No new tests (refactoring).

        * src/WebInputElement.cpp:
        (WebKit::toWebInputElement):

2011-03-10  Takayoshi Kochi  <kochi@chromium.org>

        Reviewed by Tony Chang.

        Remove default parameter declaration for familiForChars(), which is no longer necessary.

        * public/gtk/WebFontInfo.h:

2011-03-10  Nat Duca  <nduca@chromium.org>

        Reviewed by James Robinson.

        [chromium] Make updateAndDrawLayers argumentless.
        https://bugs.webkit.org/show_bug.cgi?id=55985

        Made the TilePainters and viewport parameters for
        LayerRendererChromium member variables instead of arguments on
        updateAndDrawLayers. In a future change, this will allows us to
        draw the layer tree without the WebView's assistance.

        * src/WebViewImpl.cpp:
        (WebKit::WebViewImpl::resize):
        (WebKit::WebViewImpl::paint):
        (WebKit::WebViewImpl::scrollRootLayerRect):
        (WebKit::WebViewImpl::invalidateRootLayerRect):
        (WebKit::WebViewImplContentPainter::create):
        (WebKit::WebViewImplContentPainter::paint):