@@ -118,6 +118,7 @@ public:
     WEBKIT_API WebDocument document() const;
     WEBKIT_API bool hasComputedStyle() const;
     WEBKIT_API WebString computedStyleDisplay() const;
+    WEBKIT_API bool accessibilityIsIgnored() const;
 
 #if WEBKIT_IMPLEMENTATION
     WebAccessibilityObject(const WTF::PassRefPtr<WebCore::AccessibilityObject>&);
